--- a/roles/master/templates/sge_install_template.j2
+++ b/roles/master/templates/sge_install_template.j2
@@ -21,7 +21,7 @@ DB_SPOOLING_DIR="/opt/sge/default/spooldb"
 PAR_EXECD_INST_COUNT="20"
 ADMIN_HOST_LIST="{{ master_ip }}"
 SUBMIT_HOST_LIST="{{ master_ip }}"
-EXEC_HOST_LIST="{% for host in worker_hosts %}{{ host }} {% endfor %}"
+EXEC_HOST_LIST="{{ host|join(' ') }}"
 EXECD_SPOOL_DIR_LOCAL=""
 HOSTNAME_RESOLVING="true"
 SHELL_NAME="ssh"
