proftpd changes in conf file

--- a/adapt_cluster_provisioning/roles/master/templates/proftpd.conf.j2
+++ b/adapt_cluster_provisioning/roles/master/templates/proftpd.conf.j2
@@ -1,4 +1,4 @@
-ServerName                      "Galaxy CloudMan FTP"
+ServerName                      "Galaxy/adapt @ Lehtio lab FTP"
 ServerType                      standalone
 DefaultServer                   on
 
@@ -68,11 +68,11 @@ SQLPasswordEncoding hex
 SQLEngine               on
 SQLLogFile              /var/log/proftpd-sql.log
 SQLBackend              postgres
-SQLConnectInfo          galaxy@localhost:5840 galaxyftp hf5uOj8se
+SQLConnectInfo          galaxy_adapt@localhost:5432 galaxyftp {{ galaxyftp_pg_pass }}
 SQLAuthTypes            SHA1
 SQLAuthenticate         users
 SQLDefaultUID           1001
 SQLDefaultGID           1001
 SQLDefaultHomedir       {{ proftpd_install_dir }}/var
 SQLUserInfo             custom:/LookupGalaxyUser
-SQLNamedQuery           LookupGalaxyUser SELECT "email,password,'1001','1001','/mnt/galaxyData/tmp/ftp/%U','/bin/bash' from galaxy_user where email='%U'"
+SQLNamedQuery           LookupGalaxyUser SELECT "email,password,'1001','1001','/mnt/galaxy/data/ftp_uploads/%U','/bin/bash' FROM galaxy_user WHERE email='%U'"
