--- a/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
+++ b/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
@@ -443,17 +443,17 @@ use_interactive = False
 # of the server, and will have access to create users, groups, roles,
 # libraries, and more.  For more information, see:
 # http://wiki.g2.bx.psu.edu/Admin/Interface
-#admin_users = None
+admin_users = {{ galaxy_admins|join(',') }}
 
 # Force everyone to log in (disable anonymous access).
-#require_login = False
+require_login = True
 
 # Allow unregistered users to create new accounts (otherwise, they will have to
 # be created by an admin).
 #allow_user_creation = True
 
 # Allow administrators to delete accounts.
-#allow_user_deletion = False
+allow_user_deletion = True
 
 # Allow administrators to log in as other users (useful for debugging)
 #allow_user_impersonation = False
