--- a/adapt_cluster_provisioning/roles/slurm/templates/slurm_conf.j2
+++ b/adapt_cluster_provisioning/roles/slurm/templates/slurm_conf.j2
@@ -3,7 +3,7 @@
 # See the slurm.conf man page for more information.
 #
 ControlMachine={{ groups['master'][0] }}
-ControlAddr={{ hostvars[groups['master'][0]]['ansible_eth0']['ipv4']['address'] }}
+ControlAddr={{ hostvars[groups['master'][0]][hostvars[groups['master'][0]]['private_ip_port']]['ipv4']['address'] }}
 #BackupController=
 #BackupAddr=
 #
@@ -154,7 +154,7 @@ SlurmdLogFile=/var/log/slurm-llnl/slurmd.log
 #
 # COMPUTE NODES
 {% for node in groups['workers'] %}
-NodeName={{ node }} NodeAddr={{ hostvars[node]['ansible_eth0']['ipv4']['address']}} CPUs={{ hostvars[node]['ansible_processor_vcpus'] }} CoresPerSocket={{ (hostvars[node]['ansible_processor_cores']/hostvars[node]['ansible_processor_count'])|int }} ThreadsPerCore={{ hostvars[node]['ansible_processor_threads_per_core'] }} Sockets={{ hostvars[node]['ansible_processor_count'] }} State=UNKNOWN
+NodeName={{ node }} NodeAddr={{ hostvars[node]['private_ip_port']['ipv4']['address']}} CPUs={{ hostvars[node]['ansible_processor_vcpus'] }} CoresPerSocket={{ (hostvars[node]['ansible_processor_cores']/hostvars[node]['ansible_processor_count'])|int }} ThreadsPerCore={{ hostvars[node]['ansible_processor_threads_per_core'] }} Sockets={{ hostvars[node]['ansible_processor_count'] }} State=UNKNOWN
 {% endfor %}
 PartitionName=slurm_debug Nodes={{ groups['workers']|join(',') }} Default=YES MaxTime=INFINITE State=UP#
 
