--- a/adapt_cluster_provisioning/roles/private_ip/templates/worker_sources.list.j2
+++ b/adapt_cluster_provisioning/roles/private_ip/templates/worker_sources.list.j2
@@ -1,43 +1,43 @@
 # See http://help.ubuntu.com/community/UpgradeNotes for how to upgrade to
 # newer versions of the distribution.
-deb http://{{ master_ip }}/ubuntumirror/ trusty main restricted
-deb-src http://{{ master_ip }}/ubuntumirror/ trusty main restricted
+deb http://{{ mirror_ip }}/ubuntumirror/ trusty main restricted
+deb-src http://{{ mirror_ip }}/ubuntumirror/ trusty main restricted
 
 ## Major bug fix updates produced after the final release of the
 ## distribution.
-deb http://{{ master_ip }}/ubuntumirror/ trusty-updates main restricted
-deb-src http://{{ master_ip }}/ubuntumirror/ trusty-updates main restricted
+deb http://{{ mirror_ip }}/ubuntumirror/ trusty-updates main restricted
+deb-src http://{{ mirror_ip }}/ubuntumirror/ trusty-updates main restricted
 
 ## N.B. software from this repository is ENTIRELY UNSUPPORTED by the Ubuntu
 ## team. Also, please note that software in universe WILL NOT receive any
 ## review or updates from the Ubuntu security team.
-deb http://{{ master_ip }}/ubuntumirror/ trusty universe
-deb-src http://{{ master_ip }}/ubuntumirror/ trusty universe
-deb http://{{ master_ip }}/ubuntumirror/ trusty-updates universe
-deb-src http://{{ master_ip }}/ubuntumirror/ trusty-updates universe
+deb http://{{ mirror_ip }}/ubuntumirror/ trusty universe
+deb-src http://{{ mirror_ip }}/ubuntumirror/ trusty universe
+deb http://{{ mirror_ip }}/ubuntumirror/ trusty-updates universe
+deb-src http://{{ mirror_ip }}/ubuntumirror/ trusty-updates universe
 
 ## N.B. software from this repository is ENTIRELY UNSUPPORTED by the Ubuntu 
 ## team, and may not be under a free licence. Please satisfy yourself as to 
 ## your rights to use the software. Also, please note that software in 
 ## multiverse WILL NOT receive any review or updates from the Ubuntu
 ## security team.
-deb http://{{ master_ip }}/ubuntumirror/ trusty multiverse
-deb-src http://{{ master_ip }}/ubuntumirror/ trusty multiverse
-deb http://{{ master_ip }}/ubuntumirror/ trusty-updates multiverse
-deb-src http://{{ master_ip }}/ubuntumirror/ trusty-updates multiverse
+deb http://{{ mirror_ip }}/ubuntumirror/ trusty multiverse
+deb-src http://{{ mirror_ip }}/ubuntumirror/ trusty multiverse
+deb http://{{ mirror_ip }}/ubuntumirror/ trusty-updates multiverse
+deb-src http://{{ mirror_ip }}/ubuntumirror/ trusty-updates multiverse
 
 ## N.B. software from this repository may not have been tested as
 ## extensively as that contained in the main release, although it includes
 ## newer versions of some applications which may provide useful features.
 ## Also, please note that software in backports WILL NOT receive any review
 ## or updates from the Ubuntu security team.
-deb http://{{ master_ip }}/ubuntumirror/ trusty-backports main restricted universe multiverse
-deb-src http://{{ master_ip }}/ubuntumirror/ trusty-backports main restricted universe multiverse
+deb http://{{ mirror_ip }}/ubuntumirror/ trusty-backports main restricted universe multiverse
+deb-src http://{{ mirror_ip }}/ubuntumirror/ trusty-backports main restricted universe multiverse
 
-deb http://{{ master_ip }}/ubuntumirror trusty-security main restricted
-deb-src http://{{ master_ip }}/ubuntumirror trusty-security main restricted
-deb http://{{ master_ip }}/ubuntumirror trusty-security universe
-deb-src http://{{ master_ip }}/ubuntumirror trusty-security universe
-deb http://{{ master_ip }}/ubuntumirror trusty-security multiverse
-deb-src http://{{ master_ip }}/ubuntumirror trusty-security multiverse
+deb http://{{ mirror_ip }}/ubuntumirror trusty-security main restricted
+deb-src http://{{ mirror_ip }}/ubuntumirror trusty-security main restricted
+deb http://{{ mirror_ip }}/ubuntumirror trusty-security universe
+deb-src http://{{ mirror_ip }}/ubuntumirror trusty-security universe
+deb http://{{ mirror_ip }}/ubuntumirror trusty-security multiverse
+deb-src http://{{ mirror_ip }}/ubuntumirror trusty-security multiverse
 
