No pbkdf2 since proFTPd doesnt work with that

--- a/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
+++ b/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
@@ -62,6 +62,7 @@ prefix = /galaxy
 
 [app:main]
 
+use_pbkdf2 = False
 # -- Application and filtering
 
 # The factory for the WSGI application.  This should not be changed.
