--- a/adapt_cluster_provisioning/roles/mirrors/templates/bandersnatch.conf.j2
+++ b/adapt_cluster_provisioning/roles/mirrors/templates/bandersnatch.conf.j2
@@ -1,6 +1,6 @@
 [mirror]
 ; The directory where the mirror data will be stored.
-directory = /mnt/mirrors/pypimirror
+directory = {{ pypimirror_path }}
 
 ; The PyPI server which will be mirrored.
 ; master = https://testpypi.python.org
