--- a/adapt_cluster_provisioning/roles/mirrors/templates/nginx_mirror.conf.j2
+++ b/adapt_cluster_provisioning/roles/mirrors/templates/nginx_mirror.conf.j2
@@ -17,7 +17,7 @@ http {
 
         
         location /ubuntumirror {
-            alias {{ ubuntu_mirrordir }}/ubuntu;
+            alias {{ ubuntu_mirrordir }};
             autoindex on;
             allow 127.0.0.1;
             allow 10.0.0.0/24;
