--- a/adapt_cluster_provisioning/roles/proftpd/templates/proftpd.conf.j2
+++ b/adapt_cluster_provisioning/roles/proftpd/templates/proftpd.conf.j2
@@ -68,11 +68,11 @@ SQLPasswordEncoding hex
 SQLEngine               on
 SQLLogFile              /var/log/proftpd-sql.log
 SQLBackend              postgres
-SQLConnectInfo          galaxy_adapt@localhost:5432 galaxyftp {{ galaxyftp_pg_pass }}
+SQLConnectInfo          galaxy_adapt@{{ dbserver_ip }}:5432 galaxyftp {{ galaxyftp_pg_pass }}
 SQLAuthTypes            SHA1
 SQLAuthenticate         users
 SQLDefaultUID           1001
 SQLDefaultGID           1001
 SQLDefaultHomedir       {{ proftpd_install_dir }}/var
 SQLUserInfo             custom:/LookupGalaxyUser
-SQLNamedQuery           LookupGalaxyUser SELECT "email,password,'1001','1001','{{ data_path }}/ftp_uploads/%U','/bin/bash' FROM galaxy_user WHERE email='%U'"
+SQLNamedQuery           LookupGalaxyUser SELECT "email,password,'1001','1001','{{ ftp_upload_dir }}/%U','/bin/bash' FROM galaxy_user WHERE email='%U'"
