--- a/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
+++ b/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
@@ -528,7 +528,7 @@ allow_user_dataset_purge = True
 
 # This should point to a directory containing subdirectories matching users'
 # email addresses, where Galaxy will look for files.
-ftp_upload_dir = {{ data_path }}/ftp_uploads
+ftp_upload_dir = {{ ftp_path }}
 
 # This should be the hostname of your FTP server, which will be provided to
 # users in the help text.
