--- a/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
+++ b/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
@@ -90,7 +90,7 @@ filter-with = proxy-prefix
 # may use a SQLAlchemy connection string to specify an external database
 # instead.  This string takes many options which are explained in detail in the
 # config file documentation.
-database_connection = postgresql+psycopg2://galaxy:{{ galaxy_pg_pass }}@{{ dbserver_ip }}/galaxy_adapt
+database_connection = postgresql://galaxy:{{ galaxy_pg_pass }}@{{ dbserver_ip }}/galaxy_adapt
 
 # If the server logs errors about not having enough database pool connections,
 # you will want to increase these values, or consider running more Galaxy
