--- a/adapt_cluster_provisioning/roles/proftpd/templates/proftpd.conf.j2
+++ b/adapt_cluster_provisioning/roles/proftpd/templates/proftpd.conf.j2
@@ -75,4 +75,4 @@ SQLDefaultUID           1001
 SQLDefaultGID           1001
 SQLDefaultHomedir       {{ proftpd_install_dir }}/var
 SQLUserInfo             custom:/LookupGalaxyUser
-SQLNamedQuery           LookupGalaxyUser SELECT "email,password,'1001','1001','{{ ftp_upload_dir }}/%U','/bin/bash' FROM galaxy_user WHERE email='%U'"
+SQLNamedQuery           LookupGalaxyUser SELECT "email,password,'1001','1001','{{ ftp_path }}/%U','/bin/bash' FROM galaxy_user WHERE email='%U'"
