Higher queue throughput, galaxy shouldnt throttle jobs but feed as much as possible to queue

--- a/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
+++ b/adapt_cluster_provisioning/roles/galaxy/templates/universe_wsgi.j2
@@ -669,7 +669,7 @@ default_cluster_job_runner = drmaa:///
 # jobs (so that these sometimes lengthy operations do not block normal queue
 # operation).  The value here is the number of worker threads available to each
 # started runner.
-#cluster_job_queue_workers = 3
+cluster_job_queue_workers = 40
 
 # These options are only used when using file staging with PBS.
 #pbs_application_server = 
