Hardklor will be from toolshed, so fixed shed config files, and removed hardklor tool XML and datatypes

--- a/adapt_cluster_provisioning/roles/galaxy-config/templates/galaxy.ini.j2
+++ b/adapt_cluster_provisioning/roles/galaxy-config/templates/galaxy.ini.j2
@@ -204,7 +204,7 @@ tool_dependency_dir = {{ tool_path }}
 
 # File containing the Galaxy Tool Sheds that should be made available to
 # install from in the admin interface (.sample used if default does not exist).
-#tool_sheds_config_file = config/tool_sheds_conf.xml
+tool_sheds_config_file = config/tool_sheds_conf.xml
 
 # Set to True to enable monitoring of tools and tool directories
 # listed in any tool config file specified in tool_config_file option.
