--- a/adapt_cluster_provisioning/roles/proftpd/templates/proftpd.initd.j2
+++ b/adapt_cluster_provisioning/roles/proftpd/templates/proftpd.initd.j2
@@ -1,6 +1,13 @@
 #!/bin/sh 
 
 # Start the proftpd FTP daemon.
+### BEGIN INIT INFO
+# Provides:		proftpd
+# Default-Start:	2 3 4 5
+# Default-Stop:		0 1 6
+# Short-Description:	Start proFTPd
+# Description:		proFTPd server
+### END INIT INFO
 
 PATH=/bin:/usr/bin:/sbin:/usr/local/sbin
 
