--- a/adapt_cluster_provisioning/roles/galaxy-config/templates/galaxy.ini.j2
+++ b/adapt_cluster_provisioning/roles/galaxy-config/templates/galaxy.ini.j2
@@ -51,7 +51,7 @@ use = egg:Paste#http
 port = 8090
 host = 127.0.0.1
 use_threadpool = True
-threadpool_workers = 2
+threadpool_workers = 5
 
 
 [server:handler1]
@@ -59,7 +59,7 @@ use = egg:Paste#http
 port = 8091
 host = 127.0.0.1
 use_threadpool = True
-threadpool_workers = 2
+threadpool_workers = 5
 
 
 
@@ -667,6 +667,7 @@ static_enabled = False
 # should be set to the path defined in the nginx config as an internal redirect
 # with access to Galaxy's data files (see documentation linked above).
 #nginx_x_accel_redirect_base = False
+nginx_x_accel_redirect_base = /_x_accel_redirect
 
 # nginx can make use of mod_zip to create zip files containing multiple library
 # files.  If using X-Accel-Redirect, this can be the same value as that option.
