--- a/adapt_cluster_provisioning/roles/slurm/templates/slurm_conf.j2
+++ b/adapt_cluster_provisioning/roles/slurm/templates/slurm_conf.j2
@@ -15,7 +15,7 @@
 ControlMachine={{ groups['webserver'][0] }}
 ControlAddr={{ hostvars[groups['webserver'][0]][ethernet_port]['ipv4']['address'] }}
 
-NodeName={{ groups['webserver'][0] }} NodeAddr={{ hostvars[groups['webserver'][0]][ethernet_port]['ipv4']['address']}} CPUs={{ hostvars[groups['webserver'][0]]['ansible_processor_vcpus'] - hostvars[groups['webserver'][0]]['ansible_processor_threads_per_core'] * 4 }} CoresPerSocket={{ (hostvars[groups['webserver'][0]]['ansible_processor_cores'] - 1 }} ThreadsPerCore={{ hostvars[groups['webserver'][0]]['ansible_processor_threads_per_core'] }} Sockets={{ hostvars[groups['webserver'][0]]['ansible_processor_count'] }} State=UNKNOWN
+NodeName={{ groups['webserver'][0] }} NodeAddr={{ hostvars[groups['webserver'][0]][ethernet_port]['ipv4']['address'] }} CPUs={{ hostvars[groups['webserver'][0]]['ansible_processor_vcpus'] - (hostvars[groups['webserver'][0]]['ansible_processor_threads_per_core'] * 4) }} CoresPerSocket={{ hostvars[groups['webserver'][0]]['ansible_processor_cores'] - 1 }} ThreadsPerCore={{ hostvars[groups['webserver'][0]]['ansible_processor_threads_per_core'] }} Sockets={{ hostvars[groups['webserver'][0]]['ansible_processor_count'] }} State=UNKNOWN
 PartitionName=slurm_debug Nodes={{ groups['webserver'][0] }} Default=YES MaxTime=INFINITE State=UP
 #
 #BackupController=
@@ -110,7 +110,7 @@ FastSchedule=1
 SchedulerType=sched/backfill
 SchedulerPort=7321
 SelectType=select/cons_res
-#SelectTypeParameters=
+SelectTypeParameters=CR_CPU
 #
 #
 # JOB PRIORITY
